# contextforge

./: .gitignore  Cargo.toml  README.md  contextforge.example.toml
src/: cli.rs  config.rs  corpus.rs  error.rs  lib.rs  main.rs  normalize.rs  paths.rs
src/audit/: mod.rs
src/budget/: mod.rs
src/chunk/: mod.rs
src/extract/: epub.rs  mod.rs
src/index/: mod.rs
src/metrics/: mod.rs
src/pack/: mod.rs
src/rank/: mod.rs
src/scanner/: mod.rs
src/search/: mod.rs
tests/: cli_audit.rs  cli_ergonomics.rs  cli_index.rs  cli_init.rs  cli_metrics.rs  cli_pack.rs  cli_scan.rs  cli_search.rs
