[package]
name = "contextforge"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
pdf-extract = "0.10.0"
quick-xml = "0.40.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.18"
toml = "1.1.2"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
tempfile = "3.27.0"
